--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update IP Ranges
 
 on:
   schedule:
-    - cron: '0 0 * * 1'  # 每周一凌晨UTC
+    - cron: '0 0 * * *'  # 每天凌晨UTC
   workflow_dispatch:      # 手动触发按钮
   
 permissions:
